<resources>
    <string name="app_name">TransMobile</string>
    <string name="textViewTitulo">Gestión de Autos</string>
    <string name="textViewVersion">Versión 2.6.0</string>
    <string name="textViewEncabezadoSalida">Consulta para Salida de Autos</string>
    <string name="bntBuscar">Buscar</string>
    <string name="title_activity_home2">Home2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Salida</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Salida de Autos</string>
    <string name="tv_buscar_chasis_motor">Ingrese Chasis | Motor</string>
    <string name="btnBuacar">Buscar</string>
    <string name="btn_Salida_actividad">Salidas</string>
    <string name="btn_Transferencia_actividad">Transferencias</string>
    <string name="btn_Excepciones">Excepciones</string>
    <string name="title_activity_excepciones">ExcepcionesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Excepciones_titulo">Excepciones</string>
    <string name="tv_Revision_Vehiculos">REVISION DE VEHICULOS</string>
    <string name="Titulo_Modal_Comentario_Motivo">Comentario Excepción</string>
    <string name="btnSincronizar">Sincronizar</string>
</resources>
